--- a/client/src/components/blogs/blogs.css
+++ b/client/src/components/blogs/blogs.css
@@ -58,5 +58,74 @@
 
     background-color: rgb(209, 134, 134);
 
-    /* <-- the trick */
+}
+
+.flip-card-container {
+    perspective: 1000px;
+    width: 350px;
+    /* Match the record size */
+    height: 350px;
+    display: inline-block;
+    margin: 10px;
+}
+
+
+.flip-card {
+    position: relative;
+    width: 350px;
+    height: 350px;
+    transition: transform 0.8s ease-in-out;
+    transform-style: preserve-3d;
+}
+
+.flip-card-container:hover .flip-card {
+    transform: rotateY(180deg);
+    /* <=>  rotateY(.5turn) */
+}
+
+/* Position the front and back side */
+.flip-card-front,
+.flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 50%;
+}
+
+/* Front (Record) */
+.flip-card-front {
+    background: black;
+}
+
+/* Back (Text Content) */
+.flip-card-back {
+    background: black;
+    color: lightgrey;
+    transform: rotateY(180deg);
+    flex-direction: column;
+    padding: 15px;
+}
+
+.flip-card-back h2 {
+    font-size: 1.5rem;
+}
+
+.flip-card-back p {
+    font-size: 1.2rem;
+    color: lightgrey;
+}
+
+.read-more {
+    margin-top: 10px;
+    padding: 8px 12px;
+    background: lightgrey;
+    color: grey;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
 }
