--- a/client/src/components/blogs/blogs.css
+++ b/client/src/components/blogs/blogs.css
@@ -44,29 +44,32 @@
     height: 100%;
     background-color: rgb(209, 134, 134);
     color: hsl(0, 34%, 86%);
-    overflow: scroll;
+    overflow-x: auto;
+    white-space: nowrap;
     direction: ltr;
-    padding: 30px;
+    padding: 20px;
+    scroll-behavior: smooth;
+    gap: 20px;
+}
 
+.blogContainer::-webkit-scrollbar {
+    display: none;
 }
 
 .blogItem {
-    padding: 10px;
+    flex-shrink: 0;
+    width: 350px;
+    display: inline-block;
 }
 
-.blogs {
 
-    background-color: rgb(209, 134, 134);
-
-}
 
 .flip-card-container {
-    perspective: 1000px;
-    width: 350px;
+
+    width: 360px;
     /* Match the record size */
-    height: 350px;
-    display: inline-block;
-    margin: 10px;
+    height: 360px;
+    white-space: wrap;
 }
 
 
@@ -124,8 +127,134 @@
     margin-top: 10px;
     padding: 8px 12px;
     background: lightgrey;
-    color: grey;
+    color: black;
     border: none;
     cursor: pointer;
     border-radius: 5px;
+}
+
+/*blogModal CSS*/
+
+.modalOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2000;
+}
+
+.modalContainer {
+    position: fixed;
+    display: flex;
+    width: min(80vw), max(80vw);
+    height: min(80vh), max(80vh);
+    background-color: transparent;
+    justify-content: center;
+    z-index: 3000;
+    transition: height, width 0.5s;
+}
+
+.blogModal {
+    width: 100%;
+    max-width: 800px;
+    border-radius: 50%;
+    border-style: solid;
+    border-width: 0.5px;
+    border-color: rgb(49, 48, 48);
+    aspect-ratio: 1 / 1;
+    background-color: black;
+    box-shadow: 10px 5px 5px rgb(32, 29, 29);
+    color: grey;
+    overflow-x: scroll;
+    overflow-y: scroll;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+    transform: (-50%, -50%);
+
+
+
+}
+
+.closeIcon {
+    position: absolute;
+    width: 2em !important;
+    height: 2em !important;
+    cursor: pointer;
+    background-color: black;
+}
+
+.closeIconBox {
+    background-color: black;
+    padding: 10px;
+}
+
+.closeIconBox,
+.picBox {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+.blogTitle {
+    text-align: center;
+
+}
+
+.blogArticle .blogDate p {
+    text-align: justify;
+    margin: 5px;
+    padding: 5px;
+}
+
+.blogArticle {
+    text-align: justify;
+}
+
+.pic {
+    width: auto;
+    height: auto;
+    margin-top: 100px;
+}
+
+.blogLinkBox {
+    display: flex;
+    width: 100%;
+    text-align: center;
+    align-items: center;
+    color: grey;
+    margin-top: 30px;
+    padding: 8px 12px;
+    cursor: pointer !important;
+    justify-content: center;
+
+}
+
+.blogLink {
+    background-color: white;
+    list-style-type: none;
+    padding: 15px;
+    border-radius: 20%;
+    border-style: solid;
+    border-width: 1px;
+    border-color: grey;
+    width: 100px;
+    text-decoration: none !important;
+    color: grey;
+}
+
+.blogDateBox {
+    display: flex;
+    width: 100%;
+    text-align: center;
+    align-items: center;
+    color: grey;
+    margin-top: 10px;
+    justify-content: center;
+
 }
