--- a/client/src/components/blogs/blogs.css
+++ b/client/src/components/blogs/blogs.css
@@ -112,7 +112,7 @@
     transform: rotateY(180deg);
     flex-direction: column;
     padding: 15px;
-    text-wrap: nowrap;
+    text-wrap: wrap;
 }
 
 .flip-card-back h2 {
@@ -122,7 +122,7 @@
 .flip-card-back p {
     font-size: 1.2rem;
     color: lightgrey;
-    text-wrap: nowrap;
+    text-wrap: wrap;
 }
 
 .read-more {
