--- a/client/src/components/album/album.css
+++ b/client/src/components/album/album.css
@@ -2,7 +2,7 @@
 
     display: flex;
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     justify-content: center;
     align-items: center;
     margin-top: 150px;
@@ -15,6 +15,7 @@
     border: grey 2px;
     box-shadow: 5px 5px 5px 5px rgba(113, 108, 108, 0.75);
     text-decoration: none;
+    min-width: 60vw;
 }
 
 .album {
