--- a/client/src/components/navbar/style.css
+++ b/client/src/components/navbar/style.css
@@ -1,8 +1,8 @@
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    height: 15vh;
+    min-height: 15vh !important;
     position: fixed;
     padding: 35px 35px;
     top: 0px;
@@ -10,18 +10,19 @@
     width: 100%;
 }
 
-
+.logoDiv {
+    width: 100%;
+    justify-content: center;
+}
 
 .logo-nav {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
 }
 
 .logo-container {
     display: flex;
     align-items: center;
-    justify-content: center;
     text-decoration: none;
 
 }
@@ -38,9 +39,26 @@
 }
 
 .burger {
-    display: none;
-    color: hsl(0, 11%, 70%);
+    display: none !important;
+    color: antiquewhite;
     fill: none;
+    width: 5%;
+    justify-content: left !important;
+}
+
+.columnOneNav {
+
+    display: inline-flex;
+    flex-direction: row;
+    padding: 20px;
+    font-size: 13px;
+    list-style-type: none;
+    color: antiquewhite;
+    text-decoration: none;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 
 .option {
@@ -69,6 +87,10 @@
         padding: 20px 20px;
     }
 
+    .navOption {
+        display: none;
+    }
+
     .nav-options {
         display: flex;
         width: 100%;
@@ -87,6 +109,12 @@
         margin: 0;
     }
 
+    .burger {
+        display: flex !important;
+        position: fixed;
+        justify-self: left;
+    }
+
     .nav-options.active {
         display: flex;
         background-color: darkgray;
@@ -97,9 +125,9 @@
     }
 
     .menu-icon {
-        width: 45px;
-        height: 45px;
-        color: hsl(0, 11%, 70%);
+        width: 50px;
+        height: 50px;
+        color: antiquewhite;
     }
 
     .option {
@@ -111,14 +139,16 @@
 
     .mobile-option {
         display: block;
-        color: hsl(0, 11%, 70%);
+        color: antiquewhite;
         padding: 2px;
 
     }
 
     .mobile-menu {
         display: block;
-        color: hsl(0, 11%, 70%);
+        color: antiquewhite;
         fill: none;
     }
+
+
 }
