--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,7 @@
 Body {
 
-  background-color: black;
-  width: 100%;
-  height: 100%;
-  overflow-x: hidden;
+  background-color: black !important;
+  width: 100vw;
+  height: 100vh;
 
 }
-
-;
