--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -1,38 +1,36 @@
 .footerContainer {
-    display: flex;
-    flex-direction: row;
+    display: block;
     justify-content: space-evenly;
     align-content: center;
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: black;
     opacity: 0.7;
     padding: 35px 35px;
     text-decoration: none;
     color: grey;
+    text-align: center;
 }
 
-.columnOne,
-.columnTwo,
-.columnThree,
-.columnFour {
-    width: 25%;
-}
 
 .columnOne {
     display: flex;
-    flex-direction: column;
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+    padding: 15px;
 }
 
 
 .columnOneContact {
 
-    display: inline-flex;
+    display: flex;
     flex-direction: row;
     padding: 5px;
-    font-size: 20px;
+    font-size: 40px;
+    width: 100%;
     list-style-type: none;
-    color: #403434;
+    color: antiquewhite;
     text-decoration: none;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     justify-content: space-evenly;
@@ -41,12 +39,13 @@
 .contactListItem,
 .icon {
     padding: 2px;
-    color: #403434;
+    color: antiquewhite;
     text-decoration: none;
 }
 
 .columnTwo {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     padding: 20px;
@@ -54,24 +53,20 @@
     color: grey;
 }
 
-.button link a {
+.button {
     list-style-type: none;
     padding: 15px;
-    border-radius: 15;
+    border-radius: 25px;
     width: 150px;
     text-decoration: none;
-    color: grey;
+    color: antiquewhite;
+    justify-Content: center;
 }
 
-.columnThree {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}
 
 .columnFour {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     color: #403434;
