--- a/client/src/components/informationBar/informationBar.css
+++ b/client/src/components/informationBar/informationBar.css
@@ -25,7 +25,7 @@
     background: black;
     /* Adjust to match your design */
     color: hsl(0, 34%, 86%);
-    padding: 10px 0;
+    padding: 20px;
     font-size: 1.2rem;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
@@ -42,12 +42,12 @@
 .tickerContent {
     display: inline-block;
     white-space: nowrap;
-    animation: tickerMove 100s linear infinite;
+    animation: tickerMove 70s linear infinite;
 }
 
 .tickerItem {
     display: inline-block;
-    padding-right: 50px;
+    padding-right: 20px;
     /* Space between articles */
 }
 
