--- a/client/src/pages/biography/biography.css
+++ b/client/src/pages/biography/biography.css
@@ -3,11 +3,14 @@
     justify-content: center;
     background-color: black;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    padding: 60px;
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
     color: antiquewhite;
     text-align: justify;
     font-size: 1rem;
     z-index: 2;
+    margin-bottom: 50px;
 }
 
 .biographyParagraph {
