--- a/client/src/components/blogs/blogs.css
+++ b/client/src/components/blogs/blogs.css
@@ -1,6 +1,5 @@
 .blogs {
     padding-top: 60px;
-
 }
 
 .title {
@@ -117,6 +116,7 @@
     align-items: center;
     text-align: center;
     border-radius: 50%;
+    box-shadow: 10px 5px 5px rgb(64, 38, 38);
 }
 
 /* Front (Record) */
@@ -206,11 +206,11 @@
 
 .blogModal {
     margin-top: 50px;
-    max-width: 70vw;
+    max-height: 100vh;
     border-radius: 50%;
-    border: solid 3px peru;
+    border: 2.5px solid rgb(43, 42, 42);
     aspect-ratio: 1 / 1;
-    background-color: black;
+    background-color: rgb(24, 23, 23);
     box-shadow: 10px 5px 5px rgb(32, 29, 29);
     font-family: 'Courier New', Courier, monospace;
     color: antiquewhite;
@@ -244,16 +244,17 @@
     text-align: center;
     font-family: BigShoulder;
     color: peru;
+    padding: 10px;
 }
 
 .blogArticle .blogDate p {
     text-align: justify;
     margin: 5px;
-    padding: 5px;
 }
 
 .blogArticle {
     text-align: justify;
+    padding: 15px;
 
 }
 
@@ -309,7 +310,7 @@
     }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 700px) {
     .blogModal {
         min-width: 100vw;
         /* Adjust width to fit content */
