--- a/client/src/components/navbar/style.css
+++ b/client/src/components/navbar/style.css
@@ -9,6 +9,23 @@
     width: 100%;
 }
 
+.css-1jwoeim {
+    justify-content: center;
+}
+
+.css-1p823my-MuiListItem-root {
+    display: flex;
+    justify-content: center !important;
+    text-align: center !important;
+    color: antiquewhite;
+}
+
+.nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: center !important;
+}
+
 .logoDiv {
     width: 100%;
     justify-content: center;
@@ -103,7 +120,7 @@
     }
 
     .option-container {
-        display: block;
+
         padding: 0;
         margin: 0;
     }
