--- a/client/src/pages/biography/biography.css
+++ b/client/src/pages/biography/biography.css
@@ -4,13 +4,16 @@
     background-color: black;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     padding-top: 60px;
-    padding-left: 20px;
-    padding-right: 20px;
     color: antiquewhite;
     text-align: justify;
     font-size: 1rem;
     z-index: 2;
     margin-bottom: 50px;
+}
+
+.biographyContent {
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .biographyParagraph {
@@ -39,7 +42,7 @@
     text-decoration: none;
     font-family: BigShoulder;
     font-size: 50px;
-    margin-top: 50px;
+    padding: 30px;
 }
 
 .name {
