--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -3,7 +3,7 @@
     justify-content: space-evenly;
     align-content: center;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: black;
     opacity: 0.7;
     padding: 35px 35px;
