--- a/client/src/pages/tour/tour.css
+++ b/client/src/pages/tour/tour.css
@@ -2,9 +2,11 @@
     display: flex;
     justify-content: center;
     width: 100%;
+    height: 100vh;
     padding-top: 60px;
     flex-direction: column;
     overflow: hidden;
+
 }
 
 .tourTitle {
