--- a/client/src/pages/tour/tour.css
+++ b/client/src/pages/tour/tour.css
@@ -6,6 +6,7 @@
     padding-top: 60px;
     flex-direction: column;
     overflow: hidden;
+    font-family: 'Courier New', Courier, monospace;
 
 }
 
