changed some content, added another header about new gigs and altered some styling. Added some possible extra pallette colours to app.css for later use - make the styling a bit lighter

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,3 +6,14 @@ Body {
   color: #faebd7 !important;
 
 }
+
+/* other colour ideas from swatches 
+
+CF8740
+CC6960
+AC5B7B
+7B5883
+4A5375
+2F4858
+
+*/
