--- a/client/src/pages/tour/tour.css
+++ b/client/src/pages/tour/tour.css
@@ -3,10 +3,10 @@
     justify-content: center;
     width: 100%;
     height: 100vh;
-    padding-top: 60px;
     flex-direction: column;
     overflow: hidden;
     font-family: 'Courier New', Courier, monospace;
+    background-color: #4A5375;
 
 }
 
