--- a/client/src/pages/tour/tour.css
+++ b/client/src/pages/tour/tour.css
@@ -29,25 +29,27 @@
 .showRow {
     width: 100%;
     height: 13vh;
+    background-color: #AC5B7B;
 
 }
 
 th {
     justify-content: left;
     text-align: left;
+    padding: 10px;
 
 }
 
 .tableContainer {
     width: 100%;
     color: antiquewhite;
-    padding: 30px;
+    padding: 20px;
     font-size: 2.5vw;
 
 }
 
 .tourBtn {
-    width: 80px !important;
+    width: auto !important;
     height: 20px;
     border-radius: 25px;
     border: 3px solid peru;
