--- a/client/src/pages/tour/tour.css
+++ b/client/src/pages/tour/tour.css
@@ -49,9 +49,9 @@ th {
 }
 
 .tourBtn {
-    width: auto !important;
-    height: 20px;
-    border-radius: 25px;
+    width: 100% !important;
+    height: 100%;
+    border-radius: 15px;
     border: 3px solid peru;
     text-align: center;
     cursor: pointer;
