improving accessibility score

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,11 +9,11 @@ Body {
 
 /* other colour ideas from swatches 
 
-CF8740
-CC6960
-AC5B7B
-7B5883
-4A5375
-2F4858
+#CF8740
+#CC6960
+#AC5B7B
+#7B5883
+#4A5375
+#2F4858
 
 */
