improving accessibility colour contrasts and link names

--- a/client/src/components/blogs/blogs.css
+++ b/client/src/components/blogs/blogs.css
@@ -9,7 +9,7 @@
     font-family: BigShoulder;
     font-size: 50px;
     background-color: peru;
-    color:#AC5B7B;
+    color:#4A5375;
     padding: 30px;
     text-align: justify;
     margin: 0;
