--- a/client/src/pages/tour/tour.css
+++ b/client/src/pages/tour/tour.css
@@ -29,7 +29,7 @@
 .showRow {
     width: 100%;
     height: 13vh;
-    background-color: #AC5B7B;
+    background-color:antiquewhite;
 
 }
 
@@ -42,7 +42,7 @@ th {
 
 .tableContainer {
     width: 100%;
-    color: antiquewhite;
+    color: #4A5375;
     padding: 20px;
     font-size: 2.5vw;
 
@@ -52,13 +52,13 @@ th {
     width: 100% !important;
     height: 100%;
     border-radius: 15px;
-    border: 3px solid peru;
+    border: 3px solid  #4A5375;
     text-align: center;
     cursor: pointer;
 }
 
 a {
-    color: peru;
+    color:  #4A5375;
     text-decoration: none;
 }
 
