--- a/client/src/components/album/album.css
+++ b/client/src/components/album/album.css
@@ -13,24 +13,40 @@
 .albumImg {
     border: grey 2px;
     text-decoration: none;
-
 }
 
 .album {
+    position: relative;
     display: flex;
     justify-content: center;
     list-style-type: none;
+    overflow: hidden;
     width: 100%;
     min-height: 60vh;
     text-decoration: none;
-    background-image: url("https://res.cloudinary.com/djtvlgplj/image/upload/v1743213252/medium_Gary_O_Donnell_Album_Pic_3827a8fe75.jpg");
-    background-size: cover;
-    background-repeat: none;
-    background-blend-mode: multiply;
-    background-color: grey;
-    box-shadow: inset 0px 0px 30px 30px rgba(0, 0, 0, 0.9);
-    margin-bottom: 20px;
+    object-fit: cover;
+}
 
+.heroImage {
+    width: 100%;
+    height: 60vh;
+    object-fit: cover;
+    object-position: left 30%;
+    filter: grayscale(30%);
+    margin-top: 50px;
+    
+}
+
+.heroOverlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4); /*dark overlay */
+    box-shadow: inset 0px, 0px 30px 30px rgba(0, 0, 0, 0.9);
+    pointer-events: none;
+    mix-blend-mode: multiply; /* the blend mode */
 }
 
 .buttonsArea {
