--- a/client/src/components/album/album.css
+++ b/client/src/components/album/album.css
@@ -1,5 +1,4 @@
 .album-container-grid {
-
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -16,37 +15,19 @@
 }
 
 .album {
-    position: relative;
     display: flex;
     justify-content: center;
     list-style-type: none;
-    overflow: hidden;
     width: 100%;
     min-height: 60vh;
     text-decoration: none;
-    object-fit: cover;
-}
-
-.heroImage {
-    width: 100%;
-    height: 60vh;
-    object-fit: cover;
-    object-position: left 30%;
-    filter: grayscale(30%);
-    margin-top: 50px;
-    
-}
-
-.heroOverlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.4); /*dark overlay */
-    box-shadow: inset 0px, 0px 30px 30px rgba(0, 0, 0, 0.9);
-    pointer-events: none;
-    mix-blend-mode: multiply; /* the blend mode */
+    background-size: cover;
+    background-repeat: none;
+    background-image: url("../../assets/medium_Gary_O_Donnell_Album_Pic_3827a8fe75.jpg");
+    background-blend-mode: multiply;
+    background-color: grey;
+    box-shadow: inset 0px 0px 30px 30px rgba(0, 0, 0, 0.9);
+    margin-bottom: 20px;
 }
 
 .buttonsArea {
