--- a/client/src/components/album/album.css
+++ b/client/src/components/album/album.css
@@ -6,6 +6,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 50px;
+    margin-bottom: 50px;
     background-color: black;
 }
 
