--- a/client/src/components/album/album.css
+++ b/client/src/components/album/album.css
@@ -28,7 +28,6 @@
     background-blend-mode: multiply;
     background-color: grey;
     box-shadow: inset 0px 0px 30px 30px rgba(0, 0, 0, 0.9);
-
 }
 
 .buttonsArea {
@@ -56,7 +55,7 @@
 
 .albumListdiv {
     padding: 15px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Courier New", Courier, monospace;
     font-style: bold;
     color: antiquewhite;
     display: flex;
@@ -65,7 +64,6 @@
     text-align: center;
     text-decoration: none;
     cursor: pointer;
- 
 }
 
 .actionTitle {
@@ -74,13 +72,8 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    font-family: 'Lucida Sans',
-        'Lucida Sans Regular',
-        'Lucida Grande',
-        'Lucida Sans Unicode',
-        Geneva,
-        Verdana,
-        sans-serif;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 .button:hover {
@@ -90,14 +83,20 @@
 }
 
 @media (max-width: 640px) {
-
     .album-container-grid {
-
         margin-top: 100px;
         display: block;
         width: 100%;
         height: 100%;
         justify-content: center;
         align-items: center;
+    }
+
+    .actionTitle {
+        margin-top: 5%;
+        margin-bottom: 5%;
+        margin-left: 20%;
+        margin-right: 20%;
+        text-wrap: wrap;
     }
 }
