fixed mobile dimensions for 1st pages

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,9 @@
 Body {
-
-  background-color: black !important;
-  width: 100vw;
-  height: 100vh;
-  color: #faebd7 !important;
-
+    background-color: black !important;
+    width: 100vw;
+    height: 100vh;
+    color: #faebd7 !important;
+    overflow-x: hidden;
 }
 
 /* other colour ideas from swatches 
