--- a/client/src/components/album/album.css
+++ b/client/src/components/album/album.css
@@ -5,6 +5,7 @@
     min-height: 100vh;
     justify-content: center;
     align-items: center;
+    margin-top: 50px;
     margin-bottom: 50px;
     background-color: black;
 }
@@ -84,6 +85,7 @@
 @media (max-width: 640px) {
     .album-container-grid {
         margin-top: 100px;
+        margin-bottom: 50px;
         display: block;
         width: 100%;
         height: 100%;
