--- a/client/src/pages/tour/tour.css
+++ b/client/src/pages/tour/tour.css
@@ -2,12 +2,11 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 100vh;
+    height: auto;
     flex-direction: column;
     overflow: hidden;
-    font-family: 'Courier New', Courier, monospace;
-    background-color: #4A5375;
-
+    font-family: "Courier New", Courier, monospace;
+    background-color: #4a5375;
 }
 
 .tourTitle {
@@ -29,23 +28,20 @@
 .showRow {
     width: 100%;
     height: 13vh;
-    background-color:antiquewhite;
-
+    background-color: antiquewhite;
 }
 
 th {
     justify-content: left;
     text-align: left;
     padding: 10px;
-
 }
 
 .tableContainer {
     width: 100%;
-    color:  #2d3449;
+    color: #2d3449;
     padding: 20px;
     font-size: 2.5vw;
-
 }
 
 .tourBtn {
@@ -57,7 +53,7 @@ th {
 }
 
 a {
-    color:antiquewhite;
+    color: antiquewhite;
     text-decoration: none;
 }
 
@@ -67,16 +63,14 @@ a:hover {
 
 .notTouring {
     font-size: 2.5vw;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Courier New", Courier, monospace;
     text-justify: center;
     justify-content: center;
     text-align: center;
 }
 
 th.link {
-   background-color:#2d3449;
-   padding: 20px;
-   padding-bottom: 55px;
-
- 
+    background-color: #2d3449;
+    padding: 20px;
+    padding-bottom: 55px;
 }
